# jsfiddle-build.py

./: README.md  requirements.txt  setup.cfg  setup.py
jsfiddle_build/: __init__.py  __main__.py
tests/jsfiddle_build/examples/cli/: run.sh
tests/jsfiddle_build/examples/cli/jsfiddle1/: build.html
