# https://pypi.org/project/setupcfg-generator/
[metadata]
name = jsfiddle-build
version = 2019.3.25
url = https://github.com/looking-for-a-job/jsfiddle-build.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = jsfiddle

[options]
install_requires = 
	click
	jsfiddle
	public
	setuptools
packages = 
	jsfiddle_build
